feat(skills): security batch — 6 SKILL.md through improvement loop (v6.9.16)
Six parallel subagents each ran the websearch → update → critique → update
loop on a security skill, with 7-language coverage (C#, Java, Python, C,
C++, JS/TS, SQL) and the warnings-are-bugs / refinement-loop letter
contract. Each skill grew 3-4x and now reflects May 2026 best practices.

| Skill                       | Before | After | Highlights                                                                 |
|-----------------------------|-------:|------:|----------------------------------------------------------------------------|
| security-scanner            |   175  |  537  | reframed as ASPM Tier-1 orchestrator, OWASP 2025 ranking, policy-as-code  |
| sast-scanner (prior pilot)  |   232  |  722  | (v6.9.15) 22 vuln categories, OWASP LLM, reachability, baselines          |
| secrets-detector            |   249  |  678  | sk-proj-/sk-ant- patterns, GitHub Push Protection 2026, 800+ detectors    |
| input-validation-checker    |   ~150 |  564  | parse-don't-validate, file-upload magic-bytes, Pydantic v2/Zod v4/Valibot |
| dependency-checker          |   116  |  520  | PR-time differential, OSV-Scanner v2.3.5, role split from auditor         |
| dependency-auditor          |   ~250 |  599  | OSV+GHSA+NVD+EPSS+KEV correlation, SBOM/SLSA/Sigstore/VEX, xz-utils lens  |
| concurrency-checker         |   151  |  586  | JEP 491 virtual threads, Python 3.13 free-threaded GIL, ConfigureAwait    |

Each skill includes:
  - Frontmatter preserved (tier 2, max_subagents: 0, dispatch_protocol: v1)
  - `## 2026 Best Practices` with sourced facts (no invented stats)
  - Detailed categories with BAD/SAFE pairs across the 7-language matrix
    (foundational categories show all 7; others 2-3 most relevant)
  - `## Tool Integration (2026 landscape)` with C# / .NET commands incl.
  - `## Severity` reconciling internal triage tiers with the always-`critical`
    refinement-loop letter contract
  - `## Lett